--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="Rohitsharma.jpg" type="image/x-icon">
     <title>The G.O.T.E - Rohit Gurunath Sharma</title>
 </head>
 
@@ -169,5 +170,6 @@
         </p>
     </section>
 </body>
+
 
 </html>
