--- a/index.html
+++ b/index.html
@@ -5,171 +5,176 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Rohitsharma.jpg" type="image/x-icon">
-    <title>The G.O.T.E - Rohit Gurunath Sharma</title>
+    <title>The G.O.A.T - Rohit Gurunath Sharma</title>
 </head>
 
 <body>
+
     <center>
-        <h1>The G.O.T.E - Rohit Gurunath Sharma</h1>
+        <h1>The G.O.A.T - Rohit Gurunath Sharma</h1>
     </center>
     <hr>
+
     <section>
-        <center><img src="Rohitsharma.jpg" alt="img" height="250px">
-            <h3>Rohit Gurunath Sharma – The G.O.T.E of Indian Cricket</h3>
+        <center>
+            <img src="Rohitsharma.jpg" alt="Rohit Sharma" height="250px">
+            <h3>Rohit Gurunath Sharma – The G.O.A.T of Indian Cricket</h3>
         </center>
+
         <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Rohit Gurunath Sharma, born on <b>30 April 1987</b> in Nagpur, Maharashtra, India, is widely regarded as one
-            of the
-            greatest cricketers of all time. As of 2025, he is 38 years old and stands at 5 feet 7 inches (170 cm) tall.
+            of the greatest cricketers of all time. As of 2025, he is 38 years old and stands at 5 feet 7 inches (170 cm) tall.
             Known for his elegant right-handed batting style and ability to score massive centuries with effortless
             timing, Rohit has earned a special place in world cricket. He also bowls right-arm off break occasionally,
-            though his primary role is that of a top-order batsman. Popularly nicknamed <b>“Hitman”</b> for his
-            destructive
-            batting and <b>“G.O.T.E” (Greatest Of The Era) by fans</b>, Rohit Sharma’s journey from a promising young
-            talent to
-            the captain of the Indian national team reflects his dedication, consistency, and deep passion for the game,
+            though his primary role is that of a top-order batsman. Popularly nicknamed <b>“Hitman”</b> for his destructive
+            batting and <b>“G.O.A.T” (Greatest Of All Time)</b> by fans, Rohit Sharma’s journey from a promising young
+            talent to the captain of the Indian national team reflects his dedication, consistency, and deep passion for the game,
             making him an inspiration to millions of cricket lovers.
         </p>
+
         <p>
-             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Off the field, Rohit Sharma is admired for his humble and soft-spoken nature, which perfectly complements
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Off the field, Rohit Sharma is admired for his humble and soft-spoken nature, which perfectly complements
             his greatness on the cricket field. He is a family-oriented person, deeply values relationships, and is also
-            a well-known animal lover, reflecting his compassionate personality. Rohit is known for his discipline,
+            a well-known animal lover 🐶, reflecting his compassionate personality. Rohit is known for his discipline,
             simplicity, and grounded attitude, believing strongly in hard work over noise, consistency over hype, and
-            respect for the game above all else. These qualities make him an ideal role model for millions. <br>
-             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; He represents a true rise from struggle, a late bloomer who never gave up, and a cricketer who achieved
-            extraordinary records with elegance and leadership with calmness, proving that success does not require
-            arrogance. Rohit Sharma shows the world that “you don’t need to be loud to be legendary.” His life teaches
-            valuable lessons such as being patient because success takes time, believing in one’s talent, staying
-            grounded even at the peak of achievement, leading by example, and turning criticism into motivation. In
-            every sense, Rohit Sharma is not just a cricketer—he is an era, an emotion, and truly The G.O.T.E of Indian
-            cricket.
+            respect for the game above all else.
+            <br><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;He represents a true rise from struggle, a late bloomer who never gave up, and a cricketer who achieved
+            extraordinary records with elegance and leadership with calmness. Rohit Sharma shows the world that
+            “you don’t need to be loud to be legendary.” In every sense, Rohit Sharma is not just a cricketer—he is an era,
+            an emotion, and truly the <b>G.O.A.T of Indian Cricket</b>.
         </p>
+
         <hr>
+
         <h3>Domestic & International Debut</h3>
         <table border="1" cellpadding="5" cellspacing="0">
-            <th>
-                <tr>
-                    <td><b>Format</b></td>
-                    <td><b>Debut Date</b></td>
-                    <td><b>Opponent</b></td>
-                    <td><b>Venue</b></td>
-                </tr>
-                <tr>
-                    <td>First-Class</td>
-                    <td>November 2006</td>
-                    <td>Karnataka</td>
-                    <td>Mumbai</td>
-                </tr>
-                <tr>
-                    <td>List A</td>
-                    <td>February 2007</td>
-                    <td>Karnataka</td>
-                    <td>Mumbai</td>
-                </tr>
-                <tr>
-                    <td>T20 Domestic</td>
-                    <td>April 2007</td>
-                    <td>Karnataka</td>
-                    <td>Mumbai</td>
-                </tr>
-                <tr>
-                    <td>ODI International</td>
-                    <td>June 2007</td>
-                    <td>Ireland</td>
-                    <td>Dublin</td>
-                </tr>
-                <tr>
-                    <td>T20I International</td>
-                    <td>September 2007</td>
-                    <td>South Africa</td>
-                    <td>Durban</td>
-                </tr>
-                <tr>
-                    <td>Test International</td>
-                    <td>November 2013</td>
-                    <td>West Indies</td>
-                    <td>Kolkata</td>
-                </tr>
-            </th>
+            <tr>
+                <th>Format</th>
+                <th>Debut Date</th>
+                <th>Opponent</th>
+                <th>Venue</th>
+            </tr>
+            <tr>
+                <td>First-Class</td>
+                <td>November 2006</td>
+                <td>Karnataka</td>
+                <td>Mumbai</td>
+            </tr>
+            <tr>
+                <td>List A</td>
+                <td>February 2007</td>
+                <td>Karnataka</td>
+                <td>Mumbai</td>
+            </tr>
+            <tr>
+                <td>T20 Domestic</td>
+                <td>April 2007</td>
+                <td>Karnataka</td>
+                <td>Mumbai</td>
+            </tr>
+            <tr>
+                <td>ODI International</td>
+                <td>June 2007</td>
+                <td>Ireland</td>
+                <td>Dublin</td>
+            </tr>
+            <tr>
+                <td>T20I International</td>
+                <td>September 2007</td>
+                <td>South Africa</td>
+                <td>Durban</td>
+            </tr>
+            <tr>
+                <td>Test International</td>
+                <td>November 2013</td>
+                <td>West Indies</td>
+                <td>Kolkata</td>
+            </tr>
         </table>
+
         <hr>
+
         <h3>Historic Records & Achievements</h3>
+
         <h4>🏏 ODI Records</h4>
         <ul>
-            <li>Highest individual score in ODIs: 264 runs against Sri Lanka in 2014.</li>
+            <li>Highest individual score in ODIs: 264 runs vs Sri Lanka (2014).</li>
             <li>Only player to score three double centuries in ODIs.</li>
-            <li>Fastest to reach 2000, 3000, 4000, 5000, and 6000 ODI runs.</li>
+            <li>Fastest to multiple ODI run milestones.</li>
         </ul>
+
         <h4>🏏 T20I Records</h4>
         <ul>
-            <li>First player to score five centuries in T20 Internationals.</li>
-            <li>Holds the record for the highest individual score in T20 World Cups: 118 runs against Bangladesh in
-                2016.</li>
-            <li>Joint most T20I matches as captain</li>
+            <li>First player to score five T20I centuries.</li>
+            <li>Highest T20 World Cup score: 118 vs Bangladesh (2016).</li>
+            <li>Joint most T20I matches as captain.</li>
         </ul>
+
         <h4>🏏 Test Cricket</h4>
         <ul>
-            <li>Scored a double century (212 runs) on his Test debut against West Indies in 2013.</li>
-            <li>Known for his ability to play long innings and adapt to different conditions.</li>
+            <li>212 runs on Test debut vs West Indies (2013).</li>
+            <li>Known for long innings and adaptability.</li>
         </ul>
+
         <h3>Major ICC Achievements</h3>
         <ul>
             <li>🏆 T20 World Cup Winner – 2007</li>
             <li>🏆 Champions Trophy Winner – 2013</li>
-            <li>🏆 Asia Cup Winner (multiple times as player & captain)</li>
-            <li>🏆 T20 World Cup Winner – 2024 (Captain) 🏆🔥</li>
+            <li>🏆 Asia Cup Winner (Multiple times)</li>
+            <li>🏆 T20 World Cup Winner – 2024 (Captain) 🔥</li>
         </ul>
+
         <hr>
+
         <h3>Captaincy & Leadership</h3>
         <p>
-            Rohit Sharma has been a successful captain in the Indian Premier League (IPL), leading the Mumbai Indians
-            to multiple titles. In 2021, he was appointed as the captain of the Indian national team across all formats,
-            showcasing his leadership skills and strategic acumen. Under his captaincy, India has achieved significant
-            victories, including series wins both at home and abroad.
-        <h3>IPL Titles as a Captain</h3>
-        <table border="1" cellpadding="5">
-            <th>
-                <tr>
-                    <td><b>Title</b></td>
-                    <td><b>Year</b></td>
-                    <td><b>Winner</b></td>
-                    <td><b>Runner-up</b></td>
-                </tr>
-                <tr>
-                    <td>1st Title</td>
-                    <td>2013</td>
-                    <td>Mumbai Indians</td>
-                    <td>Chennai Super Kings</td>
-                </tr>
-                <tr>
-                    <td>2nd Title</td>
-                    <td>2015</td>
-                    <td>Mumbai Indians</td>
-                    <td>Chennai Super Kings</td>
-                </tr>
-                <tr>
-                    <td>3rd Title</td>
-                    <td>2017</td>
-                    <td>Mumbai Indians</td>
-                    <td>Rising Pune Supergiant</td>
-                </tr>
-                <tr>
-                    <td>4th Title</td>
-                    <td>2019</td>
-                    <td>Mumbai Indians</td>
-                    <td>Chennai Super Kings</td>
-                </tr>
-                <tr>
-                    <td>5th Title</td>
-                    <td>2020</td>
-                    <td>Mumbai Indians</td>
-                    <td>Delhi Capitals</td>
-                </tr>
-            </th>
-        </table>
+            Rohit Sharma has been one of the most successful captains in IPL history, leading the Mumbai Indians to
+            multiple championships. In 2021, he became the captain of the Indian national team across formats.
+            His calm mindset, tactical brilliance, and player management make him a legendary leader.
         </p>
+
+        <h3>IPL Titles as Captain</h3>
+        <table border="1" cellpadding="5" cellspacing="0">
+            <tr>
+                <th>Title</th>
+                <th>Year</th>
+                <th>Winner</th>
+                <th>Runner-up</th>
+            </tr>
+            <tr>
+                <td>1st Title</td>
+                <td>2013</td>
+                <td>Mumbai Indians</td>
+                <td>Chennai Super Kings</td>
+            </tr>
+            <tr>
+                <td>2nd Title</td>
+                <td>2015</td>
+                <td>Mumbai Indians</td>
+                <td>Chennai Super Kings</td>
+            </tr>
+            <tr>
+                <td>3rd Title</td>
+                <td>2017</td>
+                <td>Mumbai Indians</td>
+                <td>Rising Pune Supergiant</td>
+            </tr>
+            <tr>
+                <td>4th Title</td>
+                <td>2019</td>
+                <td>Mumbai Indians</td>
+                <td>Chennai Super Kings</td>
+            </tr>
+            <tr>
+                <td>5th Title</td>
+                <td>2020</td>
+                <td>Mumbai Indians</td>
+                <td>Delhi Capitals</td>
+            </tr>
+        </table>
+
     </section>
+
 </body>
-
-
 </html>
